<resources>
    <string name="app_name">The Great University</string>
    <string name="app_tag">Make your University Great Again</string>

    <string name="roomType_auditorium">Auditorium</string>
    <string name="roomType_class">Class</string>

    <string name="courseType_magistral">Magistral</string> <!-- in english? -->
    <!--<string name="courseType_scienceLab">Science Lab</string>-->
    <!--<string name="courseType_agronomyLab">Agronomy Lab</string>-->
    <!--<string name="courseType_ITLab">IT Lab</string>-->
    <string name="create_univ_button">Create University</string>

    <string name="popUp_createUniv">Create university</string>
    <string name="popUp_enterName">Enter name of your University</string>
    <string name="popUp_ok">Validate</string>
    <string name="popUp_error">The name is invalid</string>
    <string name="popUp_retry">Retry (3 character min, 100 character max)</string>
    <string name="popUp_money">You do not have money to buy this</string>
    <string name="separate_student_values"> / </string>

    <!-- Help dialog -->
    <string name="help_hire">Help dialog</string>
    <string name="help_inventory">Help dialog</string>
    <string name="help_room">Help dialog</string>
    <string name="help_desc">Help button</string>
    <string name="build_icon">Build icon</string>
    <string name="rooms">Rooms</string>
    <string name="kots">Kots</string>
    <string name="rooms_cap">Capacity: %d</string>
    <string name="event_duration">%d</string>
    <string name="prof_age_value">Age: %d</string>
    <string name="prof_cours">Courses: %d</string>
    <string name="prof_popularity_value">%d%%</string>
    <string name="kot_capacity">Capacity: %d</string>
    <string name="uni_morale">%3.2f%%</string>
    <string name="uni_morale2">Morale: %d</string>

    <string name="help_hire_more">Hire a professor, the colors show the rarity! Find out how rare they are
    and more by clicking !</string>
    <string name="help_inventory_more">Click on a professor to get more information!</string>
    <string name="help_room_more">Buy buildings to increase population in your university!</string>
    <string name="help_entertainment">Click on an entertainement to build/organize it</string>



    <string name="not_available">N/a</string>
    <string name="icon_desc_money">Money Icon</string>
    <string name="icon_desc_popularity">Popularity Icon</string>
    <string name="icon_desc_professor">Professor Icon</string>
    <string name="icon_desc_choice">Choice Icon</string>
    <string name="icon_desc_population">Population Icon</string>

    <string name="popUp_Reset">Are you sur to delete your university ? All your data will be lost</string>

    <string name="prof_detail">Prof detail</string>
    <string name="prof_name">Name</string>
    <string name="prof_type">Rarity</string>
    <string name="prof_popularity">Popularity</string>
    <string name="prof_age">Age</string>
    <string name="prof_price">Price</string>
    <string name="prof_courses">Courses</string>
    <string name="color_legend">Rarity colors</string>

    <string name="button_hire">Hire</string>
    <string name="button_fire">Fire</string>

    <!-- Tutorial -->
    <string name="tutorial_welcome">Welcome to The Great University, a game where the goal is
    to become the greatest university!</string>
    <string name="tutorial_click_continue">Click to continue</string>
    <string name="tutorial_newturn">Click on Pass a week to get to the next week</string>
    <string name="tutorial_first_steps">We are going to review the different things you can do, are you ready?</string>
    <string name="tutorial_money">First, you can see how much money you have. You will earn 5 UCash for each student</string>
    <string name="tutorial_popularity">The popularity of the university will attract more students</string>
    <string name="tutorial_population">The amount of students increase when buying rooms</string>
    <string name="tutorial_turn">Each turn a week passes and things might happen!</string>
    <string name="tutorial_proflist">New professors are available for hire each turn</string>
    <string name="tutorial_profdetail">Get more info on a professor by clicking on it</string>
    <string name="tutorial_profpopularity">Each professor has a popularity. Attract more students with a popular prof!</string>
    <string name="tutorial_profprice">Each professor has to be paid weekly, make sure you can afford them!</string>
    <string name="tutorial_profrarity">Some professor are less commmon than others, click on the professor to find out what color means he is rare !</string>
    <string name="tutorial_inventory">Here are listed the professors working for you. Remember that you can fire one should you not be able to afford him.</string>

    <string name="tutorial_room">Increase the university population by adding more rooms, they take one week to be built!</string>
    <string name="tutorial_roomsize">The capacity is the amount of students it can contain</string>
    <string name="tutorial_roomprice">Overall cost of building the room</string>
    <string name="tutorial_help">If you see this icon, click on it to get more information!</string>
    <string name="layout_stat_moral">The student\'s morale impacts the population greatly!</string>
    <string name="layout_event_info">Info</string>
    <string name="layout_stats_events">Current Events</string>
    <string name="event_description">Event Description: </string>
    <string name="event_action_does">This action does: \n</string>
    <string name="event_nothing">nothing</string>
    <string name="event_a">\s a \s</string>
    <string name="event_on">\s on \s</string>
    <string name="event_of">\s of \s</string>
    <string name="event_newline">\n</string>
    <string name="action">action</string>

    <string name="tutorial_entertainment">Increase student morale by organizing a party / building a building</string>
    <string name="tutorial_entertainment_price">Overall cost is the amount of entertainemnt</string>
    <string name="tutorial_entertainment_moral">The moral will be add with this value</string>

    <string name="tutorial_kot">You can increase too the university population by buyng kots, They report their capacity multiplied by 10</string>
    <string name="tutorial_kotsize">The capacity is the amount of students it can contain</string>
    <string name="tutorial_kotprice">Overall cost of buyng the kot</string>
    <string name="game_over">If you validate, it will be GAME OVER : \n You don\'t have any professor and money.</string>
    <string name="lose_best_prof">If you validate, You will be lose your best professor by lack of money</string>
    <string name="popup_validate_btn">Validate</string>
</resources>
