<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_hire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/room_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/help_padding"
        android:background="@color/light_black">

        <TextView
            android:id="@+id/txt_help_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_help_room"
            android:gravity="center"
            android:text="@string/help_room"
            android:textSize="@dimen/text_medium" />

        <ImageView
            android:id="@+id/img_help_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_help_room"
            android:layout_alignTop="@id/txt_help_room"
            android:src="@mipmap/ic_help"
            android:contentDescription="@string/help_desc"
            android:clickable="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/help_padding"
        android:background="@color/light_black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/rooms" />

    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/help_padding"
        android:background="@color/light_black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/kots" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_kot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4a569c" />

</LinearLayout>