<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tag_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_tag"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_img"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_create_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_univ_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50sp"
            android:padding="@dimen/choice_btn_padding"

            />
    </LinearLayout>

</LinearLayout>